public/css/authentication.css
.container {
    height: 100vh;
    padding-bottom: 10vh;
}

.size {
    height: 44vh;
    width: 42vw;
}

.login-form {
    background-color: #000000bf;
    border-radius: 10px;
    padding: 5% 3% 5% 3%;
}

h1 {
    text-align: center;
}

form {
    margin-bottom: 1%;
}

label {
    color: white;
}

.btn {
    background-color: black;
}

.signup_a {
    color: white;
    text-decoration: none;
}

.signup_a:hover {
    color: white;
    text-decoration: underline;
}

